--- a/examples/kubernetes/helloworldservice-controller-v2.yaml
+++ b/examples/kubernetes/helloworldservice-controller-v2.yaml
@@ -14,30 +14,30 @@
 # limitations under the License.
 ###############################################################################
 kind: ReplicationController
-apiVersion: v1beta1
-id: helloworldservice-controller-v2
-labels:
-  name: helloworldservice
-  version: "2.0"
-  visualize: "true"
-desiredState:
-  replicas: 2
-  replicaSelector:
+apiVersion: v1
+metadata:
+  name: helloworldservice-controller-v2
+  labels:
     name: helloworldservice
     version: "2.0"
-  podTemplate:
-    labels:
-      name: helloworldservice
-      version: "2.0"
-      uses: redis
-      visualize: "true"
-    desiredState:
-      manifest:
-        version: v1beta1
-        id: helloworldservice
-        containers:
-         - name: helloworldservice
-           image: saturnism/spring-boot-helloworld-service
-           ports:
-            - name: http
-              containerPort: 8080
+    visualize: "true"
+spec:
+  replicas: 2
+  selector:
+    name: helloworldservice
+    version: "2.0"
+  template:
+    metadata:
+      labels:
+        name: helloworldservice
+        version: "2.0"
+        uses: redis
+        visualize: "true"
+    spec:
+      containers:
+       - name: helloworldservice
+         image: saturnism/spring-boot-helloworld-service:2.0
+         imagePullPolicy: Always
+         ports:
+          - name: http
+            containerPort: 8080
