--- a/examples/kubernetes/helloworldui-service.yaml
+++ b/examples/kubernetes/helloworldui-service.yaml
@@ -14,15 +14,17 @@
 # limitations under the License.
 ###############################################################################
 
-id: helloworldui
 kind: Service
-apiVersion: v1beta1
-port: 80
-containerPort: http
-sessionAffinity: None
-createExternalLoadBalancer: true
-selector:
+apiVersion: v1
+metadata:
   name: helloworldui
-labels:
-  name: helloworldui
-  visualize: "true"
+  labels:
+    name: helloworldui
+    visualize: "true"
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: http
+  selector:
+    name: helloworldui
