--- a/examples/kubernetes/mysql.yaml
+++ b/examples/kubernetes/mysql.yaml
@@ -30,5 +30,5 @@ spec:
     - name: mysql-persistent-storage
       gcePersistentDisk:
         # This GCE PD must already exist.
-        pdName: mysql-disk-2
+        pdName: mysql-disk
         fsType: ext4
