Fixed a few issues

--- a/examples/kubernetes/guestbookservice-controller.yaml
+++ b/examples/kubernetes/guestbookservice-controller.yaml
@@ -41,3 +41,6 @@ spec:
          ports:
           - name: http
             containerPort: 8080
+         resources:
+           limits:
+             cpu: "500m"
