--- a/examples/kubernetes/mysql.yaml
+++ b/examples/kubernetes/mysql.yaml
@@ -10,7 +10,7 @@ spec:
     - resources:
         limits :
           cpu: 0.5
-      image: mysql
+      image: mysql:5.6
       name: mysql
       env:
         - name: MYSQL_ROOT_PASSWORD
@@ -28,6 +28,8 @@ spec:
           mountPath: /var/lib/mysql
   volumes:
     - name: mysql-persistent-storage
+#      persistentVolumeClaim:
+#        claimName: mysql-claim
       gcePersistentDisk:
         # This GCE PD must already exist.
         pdName: mysql-disk-2
