--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,20 @@ image: docker:latest
 services:
   - docker:dind
 
+stages:
+  - build
+  - deploy
+
 build_image:
+  stage: build
   script:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
     - docker build -t registry.gitlab.com/saturnism/helloworld-service:$CI_BUILD_REF_NAME examples/helloworld-service
+
+deploy:
+  stage: deploy
+  image: saturnism/docker:kubectl
+  script:
+    - echo $KUBE_CONFIG > ~/.kube/config
+    - kubectl set image deployment/helloworld-service helloworld-service=registry.gitlab.com/saturnism/helloworld-service:$CI_BUILD_REF_NAME
 
