--- a/examples/kubernetes-1.3/mysql-pvc.yaml
+++ b/examples/kubernetes-1.3/mysql-pvc.yaml
@@ -3,10 +3,10 @@ apiVersion: v1
 metadata:
   name: mysql-pvc
   annotations:
-    volume.beta.kubernetes.io/storage-class: anything
+    volume.beta.kubernetes.io/storage-class: pd-standard
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 5Gi
