--- a/examples/kubernetes-1.3/storage-gcp-standard.yaml
+++ b/examples/kubernetes-1.3/storage-gcp-standard.yaml
@@ -2,6 +2,8 @@ kind: StorageClass
 apiVersion: storage.k8s.io/v1beta1
 metadata:
   name: pd-standard
+  annotations:
+    storageclass.beta.kubernetes.io/is-default-class: "true"
 provisioner: kubernetes.io/gce-pd
 parameters:
   type: pd-standard
