--- a/examples-java/kubernetes/zipkin-deployment.yaml
+++ b/examples-java/kubernetes/zipkin-deployment.yaml
@@ -1,4 +1,3 @@
-#!/bin/bash
 ###############################################################################
 # Copyright 2015 Google Inc. All rights reserved.
 #
@@ -14,10 +13,33 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ###############################################################################
-
-kubectl create -f storage-gcp-standard.yaml --record
-kubectl apply -f mysql-pvc.yaml -f mysql-deployment.yaml -f mysql-service.yaml --record
-kubectl apply -f redis-deployment.yaml -f redis-service.yaml --record
-kubectl apply -f guestbookservice-deployment.yaml -f guestbookservice-service.yaml --record
-kubectl apply -f helloworldservice-deployment-v1.yaml -f helloworldservice-service.yaml --record
-kubectl apply -f helloworldui-deployment-v1.yaml -f helloworldui-service.yaml --record
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: zipkin
+  labels:
+    app: zipkin
+    visualize: "true"
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: zipkin
+  template:
+    metadata:
+      labels:
+        app: zipkin
+        version: "latest"
+        visualize: "true"
+    spec:
+      containers:
+      - name: zipkin
+        image: gcr.io/stackdriver-trace-docker/zipkin-collector
+        imagePullPolicy: IfNotPresent
+        readinessProbe:
+          httpGet:
+            path: /health.json
+            port: 9411
+        ports:
+        - name: http
+          containerPort: 9411
