--- a/examples/kubernetes-federation/single-cluster/mysql-pvc.yaml
+++ b/examples/kubernetes-federation/single-cluster/mysql-pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: mysql-pvc
   annotations:
-    volume.beta.kubernetes.io/storage-class: anything
+    volume.beta.kubernetes.io/storage-class: standard
 spec:
   accessModes:
     - ReadWriteOnce
