--- a/examples/kubernetes-federation/federated-services/helloworldservice-service.yaml
+++ b/examples/kubernetes-federation/federated-services/helloworldservice-service.yaml
@@ -22,6 +22,7 @@ metadata:
     app: helloworld-service
     visualize: "true"
 spec:
+  type: LoadBalancer
   ports:
     - port: 8080
       targetPort: 8080
