Updated service name

--- a/examples/kubernetes-federation/federated-ingress/guestbook-ingress.yaml
+++ b/examples/kubernetes-federation/federated-ingress/guestbook-ingress.yaml
@@ -9,5 +9,5 @@ spec:
   - http:
       paths:
       - backend:
-          serviceName: guestbook-service
+          serviceName: helloworld-ui
           servicePort: 8080
