--- a/examples/kubernetes-federation/single-cluster/guestbookservice-deployment.yaml
+++ b/examples/kubernetes-federation/single-cluster/guestbookservice-deployment.yaml
@@ -36,7 +36,7 @@ spec:
     spec:
       containers:
       - name: guestbook-service
-        image: saturnism/guestbook-service:latest
+        image: saturnism/guestbook-service:v1
         ports:
         - name: http
           containerPort: 8080
