--- a/examples/kubernetes-1.2/guestbookservice-deployment.yaml
+++ b/examples/kubernetes-1.2/guestbookservice-deployment.yaml
@@ -41,5 +41,7 @@ spec:
         - name: http
           containerPort: 8080
         resources:
+          requests:
+            cpu: "100m"
           limits:
             cpu: "500m"
