--- a/examples/kubernetes-1.10/mysql-deployment.yaml
+++ b/examples/kubernetes-1.10/mysql-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql
@@ -16,6 +16,9 @@ spec:
       containers: 
       - name: mysql
         image: mysql:5.6
+        resources:
+          limits :
+            cpu: 0.5
         env:
         - name: MYSQL_ROOT_PASSWORD
           # change this
@@ -32,5 +35,7 @@ spec:
           mountPath: /var/lib/mysql
       volumes:
       - name: mysql-persistent-storage
-        persistentVolumeClaim:
-          claimName: mysql-pvc
+        gcePersistentDisk:
+          # This GCE PD must already exist.
+          pdName: mysql-disk
+          fsType: ext4
