--- a/examples/kubernetes-1.10/mysql-deployment.yaml
+++ b/examples/kubernetes-1.10/mysql-deployment.yaml
@@ -7,6 +7,9 @@ metadata:
     visualize: "true"
 spec: 
   replicas: 1
+  selector:
+    matchLabels:
+      app: mysql
   template:
     metadata:
       labels: 
