--- a/examples/kubernetes-1.10/redis-deployment.yaml
+++ b/examples/kubernetes-1.10/redis-deployment.yaml
@@ -23,6 +23,9 @@ metadata:
     visualize: "true"
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: redis
   template:
     metadata:
       labels:
