--- a/examples-bootiful-gcp/helloworld-ui/src/main/resources/application.properties
+++ b/examples-bootiful-gcp/helloworld-ui/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=ui
 spring.sleuth.sampler.probability=1.0
+spring.session.store-type=redis
+management.endpoints.web.exposure.include=health,prometheus
