--- a/examples-bootiful-gcp/kubernetes/helloworld-deployment.yaml
+++ b/examples-bootiful-gcp/kubernetes/helloworld-deployment.yaml
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ###############################################################################
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: helloworld-service
@@ -33,13 +33,17 @@ spec:
         version: "latest"
         serving: "true"
         visualize: "true"
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
+        promteheus.io/path: /actuator/prometheus
     spec:
       containers:
       - name: helloworld-service
-        image: saturnism/helloworld-service:latest
+        image: gcr.io/wise-coyote-827/bootiful-helloworld-service:latest
         readinessProbe:
           httpGet:
-            path: /health
+            path: /actuator/health
             port: 8080
         ports:
         - name: http
