--- a/examples-bootiful-gcp/guestbook-service/src/main/resources/application.yaml
+++ b/examples-bootiful-gcp/guestbook-service/src/main/resources/application.yaml
@@ -20,3 +20,8 @@ spring:
   sleuth:
     sampler:
       probability: 1.0
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,prometheus
