--- a/examples-bootiful-gcp/helloworld-service/src/main/resources/application.properties
+++ b/examples-bootiful-gcp/helloworld-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 greeting=Hello $name from $hostname with $version
 spring.application.name=helloworld-service
 spring.sleuth.sampler.probability=1.0
+management.endpoints.web.exposure.include=health,prometheus
