--- a/examples-bootiful-gcp/kubernetes/mysql-deployment.yaml
+++ b/examples-bootiful-gcp/kubernetes/mysql-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql
@@ -7,6 +7,9 @@ metadata:
     visualize: "true"
 spec: 
   replicas: 1
+  selector:
+    matchLabels:
+      app: mysql
   template:
     metadata:
       labels: 
