updated w/ debugger/profiler

--- a/examples-bootiful-gcp/helloworld-service/pom.xml
+++ b/examples-bootiful-gcp/helloworld-service/pom.xml
@@ -68,6 +68,10 @@
 				<groupId>pl.project13.maven</groupId>
 				<artifactId>git-commit-id-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.googlecode.maven-download-plugin</groupId>
+				<artifactId>download-maven-plugin</artifactId>
+			</plugin>
 		</plugins>
 	</build>
 
