--- a/examples-bootiful-gcp/kubernetes/mysql-deployment.yaml
+++ b/examples-bootiful-gcp/kubernetes/mysql-deployment.yaml
@@ -18,10 +18,10 @@ spec:
     spec:
       containers: 
       - name: mysql
-        image: mysql:5.6
+        image: mysql:8.0.13
         resources:
           limits :
-            cpu: 0.5
+            cpu: 1.0
         env:
         - name: MYSQL_ROOT_PASSWORD
           # change this
@@ -36,6 +36,7 @@ spec:
         - name: mysql-persistent-storage
           # mount path within the container
           mountPath: /var/lib/mysql
+          subPath: mysql
       volumes:
       - name: mysql-persistent-storage
         persistentVolumeClaim:
